@@ -1,16 +1,18 @@
 from plone.outputfilters.filters.resolveuid_and_caption import ResolveUIDAndCaptionFilter
+from plone.app.imaging.interfaces import IImageScale
 
 class FtwFileFilter(ResolveUIDAndCaptionFilter):
 
     def resolve_image(self, src):
         (image, fullimage, source, description) = ResolveUIDAndCaptionFilter.resolve_image(self, src)
-
-        url = ''
-        obj, subpath, appendix = self.resolve_link(src)
-        if image:
-            url = image.absolute_url()
-        if isinstance(url, unicode):
-            url = url.encode('utf8')
-        src = '/'.join([url, subpath, appendix])
-
+        if not IImageScale.providedBy(image):
+            url = ''
+            obj, subpath, appendix = self.resolve_link(src)
+            if image:
+                url = image.absolute_url()
+            if isinstance(url, unicode):
+                url = url.encode('utf8')
+            src = '/'.join([url, subpath, appendix])
+        else:
+            src = image.absolute_url()
         return image, fullimage, src, description
